test/static/wrong/duplicate3.kk.out
test/static/wrong/duplicate3.kk(2,29): error: Constructor static/wrong/duplicate3/Dup1 is already defined at (2,17)